# se12

./: .gitattributes  .gitignore  README.md
DRunClient/: DrunKey.keystore  buildPlayer_iOS.sh  upload_ios_symbols.sh  user.keystore
DRunClient/Assets/: DRunClient.unity  GoogleService-Info.plist  InputSystem.inputsettings.asset  btn_send.mat  build_version.json  link.xml
DRunClient/Assets/AddressableAssetsData/: AddressableAssetSettings.asset  DefaultObject.asset
DRunClient/Assets/AddressableAssetsData/AssetGroupTemplates/: Packed Assets.asset
DRunClient/Assets/AddressableAssetsData/AssetGroups/: Built In Data.asset  Default Local Group.asset  Localization-Assets-Shared.asset  Localization-Locales.asset  Localization-String-Tables-English (en).asset  Localization-String-Tables-Korean (ko).asset
DRunClient/Assets/BGLocation/Scripts/: LocationController.cs
DRunClient/Assets/BuildConfig/com.lifefesta.drun/: app_manifest.xml
DRunClient/Assets/Editor/: Drun Color Palette.colors  Drun Gradient Color Palette - BG.gradients  Drun Gradient Color Palette - Particle.gradients
DRunClient/Assets/Gacha Box/: Gacha Box.fbx  Gacha Box.unity  Gacha Box_ani.prefab  Gacha Box_open_ani.anim
DRunClient/Assets/Gacha Box/mat/: coin.mat  (+2 more)
DRunClient/Assets/HealthKit/: CMPedometerPlugin.cs
DRunClient/Assets/Resources/: build_settings.json
DRunClient/Assets/Scenes/: MainDRun.unity  uiTest.unity
DRunClient/Assets/Script/: EmbeddedMap.html
DRunClient/Assets/Script-DRun/: Yielder.cs
DRunClient/Assets/Source/: PostProcessProfile.asset  SkyBox.mat  UIMap_fireworks.mat  URP_BackgroundRenderer.asset  URP_DefaultRenderer.asset  UniversalRenderPipelineAsset.asset
DRunClient/ProjectSettings/: AndroidResolverDependencies.xml  EditorBuildSettings.asset  EditorSettings.asset  GraphicsSettings.asset  GvhProjectSettings.xml  NavMeshAreas.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
DRunClient/ProvisionProfiles/: drun_adhoc.mobileprovision  drun_store.mobileprovision
Module/: AndroidFBSdk.7z
Module/AndroidCoreService/: settings.gradle
Module/AndroidCoreService/app/: build.gradle
Module/FestaAndroidRes/: settings.gradle
Module/FestaAndroidRes/app/: build.gradle
Module/MapBoxStyle/: atlas.json  correct_lineending.sh  download_sprite.sh  mb_sprites_meta.json  run.sh
Module/Native/: genProject_Linux_JNI.sh  genProject_Windows_CSharp.bat  genProject_Windows_JNI.bat  genProject_XCode_MacOS.sh  genProject_XCode_iOS.sh
Module/Native/project_androidstudio/: settings.gradle
Module/Native/source/: CMakeLists.txt
Module/Native/source/bsdiff/: BSDiffProcessor.cpp  BSDiffProcessor.h  BSPatchProcessor.cpp  BSPatchProcessor.h  CMakeLists.txt  bsdiff.h  bspatch.c  bspatch.h
Module/Native/source/clipper/: CMakeLists.txt  clipper.cpp  clipper.hpp
Module/Native/source/collision/: CMakeLists.txt  CollisionTest.cpp  CollisionTest.h  PolygonShape.cpp  PolygonShape.h
Module/Native/source/data_structure/: CMakeLists.txt  ObjectArray.h  ObjectCache.h  ObjectLinkedList.h  PrimitiveArray.h  ReusableObject.h
Module/Native/source/diskutil/: CMakeLists.txt  DiskUtil.cpp  DiskUtil.h
Module/Native/source/landbuilder/: CMakeLists.txt  LandArea.cpp  LandArea.h  LandBuilder.cpp  LandBuilder.h  LandBuilderCache.cpp  LandBuilderCache.h
Module/Native/source/main/: CMakeLists.txt  Config.h  Debug.h  Logger.cpp  Logger.h  Precompiled.cpp  Precompiled.h  StringBuilder.cpp  StringBuilder.h
Module/Native/source/mapbox/: CMakeLists.txt  MapBoxContext.cpp  MapBoxContext.h  MapBoxContextCache.cpp  MapBoxContextCache.h  MapBoxEdge.h  MapBoxLineBoundClipper.cpp  MapBoxLineBoundClipper.h  MapBoxMeshBuilder.cpp  MapBoxMeshBuilder.h  MapBoxPolygonBuilder.cpp  MapBoxPolygonBuilder.h  MapBoxVertex.h  PointCache.h
Module/Native/source/plugin_interface/csharp/: CMakeLists.txt  PluginInterface_CSharp.cpp  PluginInterface_CSharp.h  PluginInterface_CSharp_BSDiff.cpp  PluginInterface_CSharp_Config.h  PluginInterface_CSharp_MapBox.cpp
Module/Native/source/plugin_interface/jni/: CMakeLists.txt  JNIHelper.cpp  JNIHelper.h  JNIScopedContext.cpp  JNIScopedContext.h  PluginInterface_JNI.cpp  PluginInterface_JNI.h  PluginInterface_JNI_BSDiff.cpp  PluginInterface_JNI_LandBuilder.cpp
Module/Native/source/plugin_interface/jni/include/: com_lifefesta_drun_server_module_nativemodule_NativeBSDiff.h  com_lifefesta_drun_server_module_nativemodule_NativeLandBuilder.h  com_lifefesta_drun_server_module_nativemodule_NativeMain.h
Module/Native/source/poly2tri/: CMakeLists.txt
Module/Native/source/poly2tri/common/: shapes.cc  shapes.h
Module/Native/source/poly2tri/sweep/: cdt.cc  cdt.h  sweep.cc  sweep.h  sweep_context.cc  sweep_context.h
Module/Native/source/stream/: CMakeLists.txt  MemoryStream.cpp  MemoryStream.h  Stream.h
Module/Native/source/zlib/: CMakeLists.txt
hooks/: prepare-commit-msg
(+1755 files in other folders)
